--- a/Q2- WID Dewmini/appsettings.json
+++ b/Q2- WID Dewmini/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Q2__WID_DewminiContext": "Server=(localdb)\\mssqllocaldb;Database=Q2__WID_DewminiContext-907783e3-5c7b-4d96-894d-8ea79a023da7;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
